--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,6 +40,7 @@ subjects:
 - !lcsh 'Fishers -- Fiction'
 - !lcc 'PS'
 - !lcsh 'Immigrants -- Fiction'
+- GITenberg
 tableOfContents: White and yellow -- The king of the Greeks -- A raid on the oyster
   pirates -- The siege of the "Lancashire Queen" -- Charley's coup -- Demetrios Contos
   -- Yellow handkerchief.
